--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -13,3 +13,8 @@
   box-shadow:0 0 3px 2px rgba(0,0,0,.2);
   margin-bottom: 10px;
 }
+
+.friend-link-panel {
+  padding-top: 90px;
+  padding-bottom: 30px;
+}
